# rules_go_local_repo

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE.bazel  go.mod  go.sum  godeps.bzl  main.go
cmd/local_repo_http_server/: BUILD.bazel  main.go
internal/moduleupdater/: BUILD.bazel  moduleupdater.go  moduleupdater_test.go
util/debouncer/: BUILD.bazel  debouncer.go  debouncer_test.go
