load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gonzojive/rules_go_local_repo
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=godeps.bzl%workspace_go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
