load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/gonzojive/rules_go_local_repo
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=godeps.bzl%workspace_go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# gazelle:resolve go go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library
go_library(
    name = "rules_go_local_repo_lib",
    srcs = ["main.go"],
    importpath = "github.com/gonzojive/rules_go_local_repo",
    visibility = ["//visibility:private"],
    deps = [
        "//util/debouncer",
        "@com_github_bazelbuild_buildtools//build:go_default_library",
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_golang_glog//:glog",
        "@com_github_julienschmidt_httprouter//:httprouter",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "rules_go_local_repo",
    embed = [":rules_go_local_repo_lib"],
    visibility = ["//visibility:public"],
)
