module(
    name = "rules_go_local_repo",
    version = "0.0.1",
)

bazel_dep(name = "gazelle", version = "0.39.0")
bazel_dep(name = "rules_go", version = "0.50.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_fsnotify_fsnotify", "com_github_golang_glog", "com_github_julienschmidt_httprouter", "com_github_sabhiram_go_gitignore", "org_golang_x_sync")
