load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "local_repo_http_server_lib",
    srcs = ["main.go"],
    importpath = "github.com/gonzojive/rules_go_local_repo/cmd/local_repo_http_server",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_fsnotify_fsnotify//:fsnotify",
        "@com_github_golang_glog//:glog",
        "@org_golang_x_sync//errgroup",
    ],
)

go_binary(
    name = "local_repo_http_server",
    embed = [":local_repo_http_server_lib"],
    visibility = ["//visibility:public"],
)
